--- a/project-laravel/public/css/carousel.css
+++ b/project-laravel/public/css/carousel.css
@@ -3,7 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
+  /* padding-top: 3rem; */
   padding-bottom: 3rem;
   color: rgb(var(--bs-tertiary-color-rgb));
 }
