--- a/project-laravel/public/css/dashboard.css
+++ b/project-laravel/public/css/dashboard.css
@@ -48,7 +48,7 @@ body {
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+  color: #f1faee;
 }
 
 .sidebar .nav-link:hover .feather,
@@ -67,8 +67,8 @@ body {
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+  background-color: #457b9d;
+  box-shadow: inset -1px 0 0 #457b9d;
 }
 
 .navbar .navbar-toggler {
@@ -83,10 +83,16 @@ body {
 .form-control-dark {
   color: #fff;
   background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
+  border-color: rgba(236, 48, 20, 0.9);
 }
 
 .form-control-dark:focus {
   border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+  box-shadow: 0 0 0 3px rgba(236, 48, 20, 0.9);
+}
+.bg-blue {
+  background-color: #1d3557;
+}
+.bg-bluesky {
+  background-color: #457b9d;
 }
